--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "serviceworker-webpack-plugin": "^1.0.1"
   }
 }
